# QuantAI

./: .augmentignore  .env  .gitignore  =0.5.7  AGENT.md  Dockerfile  README.md  README_OLD.md  activate_env.sh  cost_monitor_test_results.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_production_simulation.py  setup.sh
docs/: BACKUP_STRATEGY.md  DISASTER_RECOVERY.md  FINAL_SYSTEM_ANALYSIS_2025.md  architecture.md  control_plane.md  learning_agents.md  revenue_optimization_strategy.md  testing_framework.md
examples/: basic_usage.py
nginx/ssl/: cert.pem  key.pem
scripts/: api_configuration_audit.py  deploy.sh  financial_projection_validator.py  health_check.py  pre_deployment_check.py  production_config_validator.py  production_readiness_validator.py  revenue_optimization_analyzer.py  small_capital_optimizer.py  startup.sh  validate_system_architecture.py
src/quantai/: __init__.py  cli.py
src/quantai/agents/: __init__.py
src/quantai/agents/analysis/: __init__.py  macro.py  multimodal.py  strategy_coding.py  strategy_generation.py
src/quantai/agents/analytics/: __init__.py  performance_attribution_agent.py
src/quantai/agents/compliance/: __init__.py  compliance_agent.py
src/quantai/agents/control/: __init__.py  api_manager.py  cost_monitor.py  dashboard.py  kill_switch.py
src/quantai/agents/execution/: __init__.py  deployment.py  monitor.py  trader.py
src/quantai/agents/learning/: __init__.py  feedback.py  feedback_loop.py  memory.py  profitability.py
src/quantai/agents/validation/: __init__.py  risk_control.py  strategy.py  strategy_validator.py
src/quantai/analytics/: __init__.py  advanced_risk.py  performance_attribution.py
src/quantai/api/: __init__.py  auth.py  models.py  server.py
src/quantai/compliance/: __init__.py  audit_trail.py  compliance_monitor.py  regulatory_reporting.py  trade_reporting.py
src/quantai/core/: __init__.py  account_manager.py  base.py  config.py  financial_products.py  memory.py  messages.py  model_adapter.py  runtime.py
src/quantai/integrations/: __init__.py  ibkr.py  realtime_data.py  telegram.py  trading_manager.py
src/quantai/simulation/: production_runner.py
src/quantai/utils/: __init__.py  config.py  logging.py  validation.py
tests/integration/: __init__.py
